--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
     <meta charset="utf-8">
     <title>Holy Grail</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik+Mono+One" rel="stylesheet">
   </head>
   <body class = "grail">
 
     <header class="grail-header">Holy Grail Layout</header>
     <div class="grail-body">
       <main class="grail-content">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="text-box">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
       </main>
-      <nav class="grail-nav">Nav</nav>
-      <aside class="grail-aside">Aside</aside>
+      <nav class="grail-nav">
+        <div class="nav">Home</div>
+        <div class="nav">Store</div>
+        <div class="nav">Contact</div>
+      </nav>
+      <!-- <aside class="grail-aside">Aside</aside> -->
     </div>
-    <footer class="grail-footer">ByeBye</footer>
+    <footer class="grail-footer">&copy Grail Thyme</footer>
+    <script type="text/javascript" src="script.js">
 
+    </script>
   </body>
 </html>
